namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-dpr-tools-probation-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-dpr-tools-probation-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ask_dpr"
    cloud-platform.justice.gov.uk/application: "Digital Probation Reporting Tools"
    cloud-platform.justice.gov.uk/owner: "Digital Probation Reporting: digitalprisonreporting@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-dpr-tools-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-digital-prison-reporting"
    cloud-platform.justice.gov.uk/review-after: ""
